--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "ws": "^7.4.0"
     },
     "scripts": {
-        "start": "node src/index.js"
+        "start": "cd src && node index"
     },
     "repository": {
         "type": "git",
